1.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    istio-injection: enabled
