2.app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - image: nginxdemos/hello
          imagePullPolicy: Always
          name: hello-world
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
