3.app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: demo-app
spec:
  ports:
    - name: http-flask
      port: 5000
      targetPort: 80
  selector:
    app: hello-world
  type: ClusterIP
