8.deny.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "frontend-ingress"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      # istio: external
      istio: ingressgateway
  action: DENY
  rules:
  - when:
      - key: request.headers[x-plan]
        notValues: ["BASIC", "PLUS"]
  - when:
      - key: request.headers[x-account]
        notValues: ["*"]
